# ImageMod

./: IMAdapt.py  LICENSE.txt  README.md
imageMod/: CMakeLists.txt  CMakePresets.json
imageMod/src/: imageMod.c  main.h
